added school logo

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -8,14 +8,15 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords"
-        content="keywords here...">
+        content="Exams Crib, Crawford Exam Crib,  ">
     <meta name="description"
-        content="description here...">
+        content="A exam time table app and exam reminder app developed by Sodbridge Solutions">
+    <meta author="Damilare Samuel, Sodbridge Solutions">
     <meta name="robots" content="noindex,nofollow">
     <title>Exams Crib</title>
     <link rel="canonical" href="#" />
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'plugins/images/favicon.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/crawford-university-logo.png' %}">
     <!-- Custom CSS -->
    <link href="{% static 'css/style.min.css' %}" rel="stylesheet">
 </head>
@@ -48,7 +49,7 @@
                         <!-- Logo icon -->
                         <b class="logo-icon">
                             <!-- Dark Logo icon -->
-                            <img src="{% static 'plugins/images/logo-icon.png' %}" alt="homepage" />
+                            <img src="{% static 'img/crawford-university-logo.png' %}" style="width:30px; height:30px;" alt="homepage" />
                         </b>
                         <!--End Logo icon -->
                         <!-- Logo text -->
