--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -38,7 +38,11 @@
 	<!-- NavBar Here -->
 	<div id="header">
 		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-		  <a class="navbar-brand mr-15" href="/">Exams Crib</a>
+
+		  <a class="navbar-brand mr-15" href="/">
+            <img src="{% static 'img/crawford-university-logo.png' %}" style="width:50px; height:30px;" alt="homepage" />
+		      Exams Crib
+		  </a>
 		  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button> -->
@@ -47,10 +51,10 @@
 
 			<ul class="menu navbar-nav mr-auto">
 				<li class='selected nav-link'>
-					<a class="nav-link" href="">Contact</a>
+					<a class="nav-link" href="#">About</a>
 				</li>
 				<li class='selected nav-link'>
-					<a class="nav-link" href="#">About</a>
+					<a class="nav-link" href="#">Contact</a>
 				</li>
 			</ul>
 				   
